add route blocks

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -2,5 +2,12 @@
 
 @import "bootstrap_modificado/bootstrap"
 
+
 body
-  background-color: red
+  .header
+    background-color: #ffd798
+  .form
+    background-color: #d5ccff
+    padding: 20px
+  .list
+    background-color: #95ffb1
